# School_management_system_project

./: CMakeLists.txt  README.md  faculty.c  fees.c  fileoperation.c  main.c  main1.c  section.c  student.c
